# TCP-FileExplorer

./: README.md
client/Client/: Client.sln  TcpFileExplorerClient.sln
client/Client/Client/: App.axaml  App.axaml.cs  Client.csproj  Program.cs
client/Client/Client/TcpClient/: DirectoryParse.cs  MessageType.cs  TcpClient.cs
client/Client/Client/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
client/Client/Client/Views/: MainWindow.axaml
client/Client/FileExplorerClient/: ViewLocator.cs
client/Client/FileExplorerClient/TcpClient/: MessageType.cs  Parse.cs  TcpClient.cs
client/Client/FileExplorerClient/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
client/Client/FileExplorerClient/Views/: MainWindow.axaml  MainWindow.axaml.cs
lib/: CMakeLists.txt  handler.cpp  handler.hpp  server.cpp  server.hpp
server/: .gitignore  :w  CMakeLists.txt
server/.cache/clangd/index/: fs_task.cpp.F8217FE1259CE875.idx  fs_task.hpp.93DAC64DD0664EA2.idx  handler.cpp.41F500FF94CFCD81.idx  handler.cpp.580586B8435F0B86.idx  handler.hpp.397EA84F222BB924.idx  handler.hpp.56FA8A8B02EAB11E.idx  info_client.cpp.D1C8272DD858E701.idx  info_client.hpp.272CB8D39D75B565.idx  ip_addr.cpp.0E016AC4025AFE5B.idx  ip_addr.cpp.7492066A8F225594.idx  ip_addr.hpp.1F88507CE122EE0E.idx  ip_addr.hpp.269AA1ADE3A33AE5.idx  main.cpp.BBE9E0D8B808637B.idx  message_type.cpp.BCDCB8E36C82E53A.idx  message_type.h.C1833BF1B6F2F56C.idx  message_type.hpp.0CF89E7B037A7D14.idx  server.cpp.46E6E9A72B527666.idx  server.cpp.C333FF2E4551D39D.idx  server.hpp.52936B9477B45827.idx  server.hpp.B2424B79440D63E6.idx  task.cpp.8C9DE2B34324E15C.idx  task.hpp.09543A6320445AE9.idx  tcp_client.cpp.7E15BA52CFF18B98.idx  tcp_client.hpp.02652017BC4425ED.idx  tcp_client.hpp.A859B50F81866C0C.idx  tcp_listener.cpp.B82A7BAB78ED6F56.idx  tcp_listener.cpp.B98755B60F55B74D.idx  tcp_listener.hpp.89E7A96045B794BF.idx  tcp_listener.hpp.928CB0CA5B6C3D32.idx
server/lib/: CMakeLists.txt  fs_task.cpp  fs_task.hpp  handler.cpp  handler.hpp  ip_addr.cpp  ip_addr.hpp  message_type.cpp  message_type.h  message_type.hpp  server.cpp  server.hpp  tcp_client.cpp  tcp_client.hpp  tcp_listener.cpp  tcp_listener.hpp
server/lnet/: CMakeLists.txt  ip_addr.cpp  ip_addr.hpp  tcp_client.cpp  tcp_client.hpp  tcp_listener.cpp  tcp_listener.hpp
server/lserver/: CMakeLists.txt  connection.cpp  connection.hpp  console_logger.cpp  console_logger.hpp  fs_task.cpp  fs_task.hpp  handler.cpp  handler.hpp  info_client.cpp  info_client.hpp  logger.hpp  message_type.cpp  message_type.hpp  messages_types.cpp  messages_types.hpp  server.cpp  server.hpp  task.cpp  task.hpp
server/src/: CMakeLists.txt  main.cpp
